// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PokemonController findById findByExternalId should get pokemon by external id 1`] = `
{
  "attacks": {
    "fast": [
      {
        "damage": 12,
        "name": "Tackle",
        "type": "Normal",
      },
      {
        "damage": 7,
        "name": "Vine Whip",
        "type": "Grass",
      },
    ],
    "special": [
      {
        "damage": 70,
        "name": "Power Whip",
        "type": "Grass",
      },
      {
        "damage": 40,
        "name": "Seed Bomb",
        "type": "Grass",
      },
      {
        "damage": 55,
        "name": "Sludge Bomb",
        "type": "Poison",
      },
    ],
  },
  "classification": "Seed Pokémon",
  "createdAt": Any<Date>,
  "evolutionRequirements": {
    "amount": 25,
    "name": "Bulbasaur candies",
  },
  "evolutions": [
    {
      "createdAt": Any<Date>,
      "externalId": "2",
      "id": Any<String>,
      "name": "Ivysaur",
      "updatedAt": Any<Date>,
    },
    {
      "createdAt": Any<Date>,
      "externalId": "3",
      "id": Any<String>,
      "name": "Venusaur",
      "updatedAt": Any<Date>,
    },
  ],
  "externalId": "001",
  "fleeRate": 0.1,
  "height": {
    "maximum": "0.79m",
    "minimum": "0.61m",
  },
  "id": Any<String>,
  "maxCP": 951,
  "maxHP": 1071,
  "name": "Bulbasaur",
  "previousEvolutions": [],
  "resistant": [
    "Water",
    "Electric",
    "Grass",
    "Fighting",
    "Fairy",
  ],
  "types": [
    "Grass",
    "Poison",
  ],
  "updatedAt": Any<Date>,
  "weaknesses": [
    "Fire",
    "Ice",
    "Flying",
    "Psychic",
  ],
  "weight": {
    "maximum": "7.76kg",
    "minimum": "6.04kg",
  },
}
`;

exports[`PokemonController findById findByName should get pokemon by name 1`] = `
{
  "attacks": {
    "fast": [
      {
        "damage": 12,
        "name": "Tackle",
        "type": "Normal",
      },
      {
        "damage": 7,
        "name": "Vine Whip",
        "type": "Grass",
      },
    ],
    "special": [
      {
        "damage": 70,
        "name": "Power Whip",
        "type": "Grass",
      },
      {
        "damage": 40,
        "name": "Seed Bomb",
        "type": "Grass",
      },
      {
        "damage": 55,
        "name": "Sludge Bomb",
        "type": "Poison",
      },
    ],
  },
  "classification": "Seed Pokémon",
  "createdAt": Any<Date>,
  "evolutionRequirements": {
    "amount": 25,
    "name": "Bulbasaur candies",
  },
  "evolutions": [
    {
      "createdAt": Any<Date>,
      "externalId": "2",
      "id": Any<String>,
      "name": "Ivysaur",
      "updatedAt": Any<Date>,
    },
    {
      "createdAt": Any<Date>,
      "externalId": "3",
      "id": Any<String>,
      "name": "Venusaur",
      "updatedAt": Any<Date>,
    },
  ],
  "externalId": "001",
  "fleeRate": 0.1,
  "height": {
    "maximum": "0.79m",
    "minimum": "0.61m",
  },
  "id": Any<String>,
  "maxCP": 951,
  "maxHP": 1071,
  "name": "Bulbasaur",
  "previousEvolutions": [],
  "resistant": [
    "Water",
    "Electric",
    "Grass",
    "Fighting",
    "Fairy",
  ],
  "types": [
    "Grass",
    "Poison",
  ],
  "updatedAt": Any<Date>,
  "weaknesses": [
    "Fire",
    "Ice",
    "Flying",
    "Psychic",
  ],
  "weight": {
    "maximum": "7.76kg",
    "minimum": "6.04kg",
  },
}
`;

exports[`PokemonController findById paginate should paginate over pokemons 1`] = `
{
  "data": [
    {
      "attacks": {
        "fast": [
          {
            "damage": 12,
            "name": "Tackle",
            "type": "Normal",
          },
          {
            "damage": 7,
            "name": "Vine Whip",
            "type": "Grass",
          },
        ],
        "special": [
          {
            "damage": 70,
            "name": "Power Whip",
            "type": "Grass",
          },
          {
            "damage": 40,
            "name": "Seed Bomb",
            "type": "Grass",
          },
          {
            "damage": 55,
            "name": "Sludge Bomb",
            "type": "Poison",
          },
        ],
      },
      "classification": "Seed Pokémon",
      "createdAt": Any<Date>,
      "evolutionRequirements": {
        "amount": 25,
        "name": "Bulbasaur candies",
      },
      "evolutions": [
        {
          "createdAt": Any<Date>,
          "externalId": "2",
          "id": Any<String>,
          "name": "Ivysaur",
          "updatedAt": Any<Date>,
        },
        {
          "createdAt": Any<Date>,
          "externalId": "3",
          "id": Any<String>,
          "name": "Venusaur",
          "updatedAt": Any<Date>,
        },
      ],
      "externalId": "001",
      "fleeRate": 0.1,
      "height": {
        "maximum": "0.79m",
        "minimum": "0.61m",
      },
      "id": Any<String>,
      "maxCP": 951,
      "maxHP": 1071,
      "name": "Bulbasaur",
      "previousEvolutions": [],
      "resistant": [
        "Water",
        "Electric",
        "Grass",
        "Fighting",
        "Fairy",
      ],
      "types": [
        "Grass",
        "Poison",
      ],
      "updatedAt": Any<Date>,
      "weaknesses": [
        "Fire",
        "Ice",
        "Flying",
        "Psychic",
      ],
      "weight": {
        "maximum": "7.76kg",
        "minimum": "6.04kg",
      },
    },
  ],
  "pageInfo": {
    "count": 151,
    "exceedCount": false,
    "exceedTotalPages": false,
    "limit": 1,
    "page": 1,
  },
}
`;

exports[`PokemonController findById should get pokemon by id 1`] = `
{
  "attacks": {
    "fast": [
      {
        "damage": 12,
        "name": "Tackle",
        "type": "Normal",
      },
      {
        "damage": 7,
        "name": "Vine Whip",
        "type": "Grass",
      },
    ],
    "special": [
      {
        "damage": 70,
        "name": "Power Whip",
        "type": "Grass",
      },
      {
        "damage": 40,
        "name": "Seed Bomb",
        "type": "Grass",
      },
      {
        "damage": 55,
        "name": "Sludge Bomb",
        "type": "Poison",
      },
    ],
  },
  "classification": "Seed Pokémon",
  "createdAt": Any<Date>,
  "evolutionRequirements": {
    "amount": 25,
    "name": "Bulbasaur candies",
  },
  "evolutions": [
    {
      "createdAt": Any<Date>,
      "externalId": "2",
      "id": Any<String>,
      "name": "Ivysaur",
      "updatedAt": Any<Date>,
    },
    {
      "createdAt": Any<Date>,
      "externalId": "3",
      "id": Any<String>,
      "name": "Venusaur",
      "updatedAt": Any<Date>,
    },
  ],
  "externalId": "001",
  "fleeRate": 0.1,
  "height": {
    "maximum": "0.79m",
    "minimum": "0.61m",
  },
  "id": Any<String>,
  "maxCP": 951,
  "maxHP": 1071,
  "name": "Bulbasaur",
  "previousEvolutions": [],
  "resistant": [
    "Water",
    "Electric",
    "Grass",
    "Fighting",
    "Fairy",
  ],
  "types": [
    "Grass",
    "Poison",
  ],
  "updatedAt": Any<Date>,
  "weaknesses": [
    "Fire",
    "Ice",
    "Flying",
    "Psychic",
  ],
  "weight": {
    "maximum": "7.76kg",
    "minimum": "6.04kg",
  },
}
`;

exports[`PokemonController findById types should paginate over pokemons types 1`] = `
{
  "data": [
    "Bug",
    "Dragon",
    "Electric",
    "Fairy",
    "Fighting",
    "Fire",
    "Flying",
    "Ghost",
    "Grass",
    "Ground",
    "Ice",
    "Normal",
    "Poison",
    "Psychic",
    "Rock",
    "Steel",
    "Water",
  ],
}
`;
